2010-12-21 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-07-00
	* Add new boolean parameter 'uniqueEvents' for event consumers. If it is set to
	  'true', the queue might be shared with other event consumers requesting the
	  same events and queue type. This allows multiple consumers to get unique
	  events. Otherwise, the same event might be served to multiple consumers.
	* Assure that the same event cannot be selected multiple times for the same
	  stream/queue. This was ascertained by construction of the consumer registration,
	  but might be less reliable with the new scheme.
	* Introduce new unsigned int parameter 'prescale' for event consumers. It allows
	  consumers to specify a prescale. The default is 1, i.e. no prescale.
	* Keep track of number of discarded (dropped) events for each event consumer.
	* Add and improve several unit-tests to test the new features.

2010-12-15 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-06-01
	* More type fixes to make 32 bit & 64 bit Linux, as well as Mac OS X happy.

2010-12-15 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-06-00
	* Use boost::posix_time::time_duration instead of integer seconds
	  for ConcurrentQueue timed_wait methods.
	* Use boost::posix_time instead of double for time related quantities.
	* Average the throughput quantities over the last 10 s (configurable
	  by setting 'throuphputAveragingCycles'). The actual averaging time is
	  reported in the new infospace variable 'averagingTime'.
	* Remove obsolete infospace quantities 'bandwithToDisk' (not typo) and
	  'staleChains' (replaced with 'faultyEvents').
	* Avoid parsing unused parameters from the SM stream configuration.
	* Fix a couple of integer precision issues for 64-bit.

2010-12-03 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-05-01
	* Fix detection of CVS version string.

2010-12-03 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V06-05-00
	* Rework SM hyperdaq page: add time stamp and hostname to banner, use